[package]
name = "home-bridge"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tokio = { version = "1.12.0", features = ["full"] }
tokio-util  = { version = "0.6", features = ["full"] }
log = "0.4"
futures = {version = "0.3", features = ["executor", "thread-pool"] }
bytes = "*"
lightning-containers = "*"